Fixed scrolling on mobile

--- a/src/components/Metronome.css
+++ b/src/components/Metronome.css
@@ -280,6 +280,10 @@
       width: 6rem;
     }
 
+    .metronome-sliders {
+      flex-direction: row;
+    }
+
     
   }
   
